[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dandroid126-utils"
version = "2.0.0"
authors = [
  { name="dandroid126", email="mail@dandroid.app" },
]
description = "Utils with my personal preference for settings."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GPLv3 License",
    "Operating System :: Linux",
]

[project.urls]
Homepage = "https://github.com/dandroid126/utils"
Issues = "https://github.com/dandroid126/utils/issues"